[package]
name = "rust_hollow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.19"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }